--- a/Identity/Views/Home/LogIn.cshtml
+++ b/Identity/Views/Home/LogIn.cshtml
@@ -1,7 +1,36 @@
-﻿
+﻿@model Identity.ViewModels.LoginViewModel
+
 @{
     ViewData["Title"] = "LogIn";
 }
 
-<h1>Burası login sayfası olacak</h1>
+<div class="row">
+    <div class="col-md-4 offset-md-4">
+<h4>Kullanıcı Giriş</h4>
+<hr />
+
+        <form asp-action="LogIn">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password" class="control-label"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
+                </label>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
 
