--- a/Identity/Views/Member/Index.cshtml
+++ b/Identity/Views/Member/Index.cshtml
@@ -1,7 +1,38 @@
-﻿
+﻿@model UserViewModel
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Member/MemberLayout.cshtml";
 }
 
-<h1>Index</h1>
+<h3 class="text-center">Üye Bilgileri</h3>
+<div class="row">
+    <div class="col-sm-3">
+        <img style="height:100%; width:100%" src="~/UserPictures/user.webp" />
+
+    </div>
+    <div class="col-sm-9">
+
+        <table class="table table-bordered table-striped">
+            <tr>
+                <th>Kullanıcı ismi</th>
+                <td>@Model.UserName</td>
+            </tr>
+            <tr>
+                <th>E-posta</th>
+                <td>@Model.Email</td>
+            </tr>
+
+            <tr>
+                <th>Telefon no</th>
+                <td>@Model.PhoneNumber</td>
+            </tr>
+            
+           
+        </table>
+
+
+
+    </div>
+
+</div>
 
