--- a/Identity/Views/Member/Index.cshtml
+++ b/Identity/Views/Member/Index.cshtml
@@ -7,7 +7,7 @@
 <h3 class="text-center">Üye Bilgileri</h3>
 <div class="row">
     <div class="col-sm-3">
-        <img style="height:100%; width:100%" src="~/UserPictures/user.webp" />
+        <img style=" width:100%" src="@Model.Picture" />
 
     </div>
     <div class="col-sm-9">
@@ -26,8 +26,20 @@
                 <th>Telefon no</th>
                 <td>@Model.PhoneNumber</td>
             </tr>
-            
-           
+            <tr>
+                <th>Şehir</th>
+                <td>@Model.City</td>
+            </tr>
+            <tr>
+                <th>Cinsiyet</th>
+                <td>@Model.Gender</td>
+            </tr>
+            <tr>
+                <th>Doğum Tarihi</th>
+                <td>@Model.BirthDay.Value.ToShortDateString()</td>
+            </tr>
+
+
         </table>
 
 
