--- a/Identity/Views/Member/MemberLayout.cshtml
+++ b/Identity/Views/Member/MemberLayout.cshtml
@@ -32,7 +32,7 @@
             <div class="col-md-4">
                 <a class="btn btn-info btn-block" asp-action="PasswordChange" asp-controller="Member">Şifre Değiştirme</a>
                 <a class="btn btn-info btn-block" asp-action="UserEdit" asp-controller="Member">Bilgilerimi Güncelle</a>
-                <a class="btn btn-info btn-block" asp-action="LogOut" asp-controller="Member">Çıkış</a>
+                <a class="btn btn-info btn-block" asp-action="LogOut" asp-controller="Member" asp-route-returnUrl="/Home/Index">Çıkış</a>
 
             </div>
         </div>
