--- a/Identity/Views/Admin/AdminLayout.cshtml
+++ b/Identity/Views/Admin/AdminLayout.cshtml
@@ -10,7 +10,7 @@
     <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -18,10 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" asp-action="Index" asp-controller="Member">Üye AnaSayfa </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link btn btn-info"  asp-action="Index" asp-controller="Admin">Admin AnaSayfa </a>
+                    <a class="nav-link" asp-action="Index" asp-controller="Admin">Admin AnaSayfa </a>
                 </li>
 
             </ul>
@@ -33,9 +30,13 @@
                 @RenderBody()
             </div>
             <div class="col-md-4">
-                <a class="btn btn-info btn-block" asp-action="PasswordChange" asp-controller="Member">Şifre Değiştirme</a>
-                <a class="btn btn-info btn-block" asp-action="UserEdit" asp-controller="Member">Bilgilerimi Güncelle</a>
-                <a class="btn btn-info btn-block" asp-action="LogOut" asp-controller="Member" asp-route-returnUrl="/Home/Index">Çıkış</a>
+                <h3>Menü</h3>
+
+                <a class="btn btn-danger btn-block" asp-action="Users" asp-controller="Admin">Üyeler</a>
+
+                <a class="btn btn-danger btn-block" asp-action="Roles" asp-controller="Admin">Roller</a>
+
+                <a class="btn btn-danger btn-block" asp-action="Logout" asp-controller="Member" asp-route-returnUrl="/Home/Index">Çıkış yap</a>
 
             </div>
         </div>
