--- a/Identity/Views/Admin/Index.cshtml
+++ b/Identity/Views/Admin/Index.cshtml
@@ -1,37 +1,9 @@
-﻿@model List<AppUser>
+﻿
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/AdminLayout.cshtml";
+    Layout = "~/Views/Admin/AdminLayout.cshtml";
 }
 
-<table class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <th>User Id</th>
-            <th>User Name</th>
-            <th>Email</th>
-        </tr>
-    </thead>
-    <tbody>
-        @if (Model.Count() > 0)
-        {
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>@item.Id</td>
-                    <td>@item.UserName</td>
-                    <td>@item.Email</td>
-                </tr>
-            }
-        }
-        else
-        {
-            <tr>
-                <td colspan="3">Hiçbir üye yoktur</td>
-            </tr>
 
-        }
-    </tbody>
-
-</table>
+<h2>Admin ana sayfasına hoş geldiniz...</h2>
 
