--- a/Identity/Views/_ViewImports.cshtml
+++ b/Identity/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper Identity.CustomTagHelpers.*,Identity
 @using Identity.Models
 @using Identity.ViewModels
 @using Identity.Enums
