--- a/Identity/Views/Admin/Users.cshtml
+++ b/Identity/Views/Admin/Users.cshtml
@@ -10,6 +10,8 @@
         <td>User Id</td>
         <td>User Name</td>
         <td>Email</td>
+        <td>Roller</td>
+        <td>Rol Ata</td>
     </tr>
     @if (Model.Count() == 0)
     {
@@ -25,5 +27,7 @@
     <td>@item.Id</td>
     <td>@item.UserName</td>
     <td>@item.Email</td>
+    <td user-roles="@item.Id"></td>
+    <td> <a class="btn btn-success" asp-action="RoleAssign" asp-route-id="@item.Id">Rol ata</a></td>
 </tr>}}
 </table>
