--- a/Identity/Views/Admin/Users.cshtml
+++ b/Identity/Views/Admin/Users.cshtml
@@ -4,7 +4,7 @@
 
 <h3>Üyeler</h3>
 <hr />
-<table class="table table-bordered table-striped">
+<table class="table table-bordered table-striped table-responsive">
 
     <tr>
         <td>User Id</td>
