--- a/Identity/Views/Member/Index.cshtml
+++ b/Identity/Views/Member/Index.cshtml
@@ -12,7 +12,7 @@
     </div>
     <div class="col-sm-9">
 
-        <table class="table table-bordered table-striped">
+        <table class="table table-bordered table-striped table-responsive">
             <tr>
                 <th>Kullanıcı ismi</th>
                 <td>@Model.UserName</td>
@@ -28,7 +28,19 @@
             </tr>
             <tr>
                 <th>Şehir</th>
-                <td>@Model.City</td>
+                <td>
+                    @if (Model.City == null)
+                    {
+                        <span>Belirtilmemiş</span>
+                    }
+                    else
+                    {
+                        @Model.City
+                    }
+
+
+
+                </td>
             </tr>
             <tr>
                 <th>Cinsiyet</th>
@@ -36,7 +48,18 @@
             </tr>
             <tr>
                 <th>Doğum Tarihi</th>
-                <td>@Model.BirthDay.Value.ToShortDateString()</td>
+                <td>
+                    @if (Model.BirthDay == null)
+                    {
+                        <span>Belirtilmemiş</span>
+                    }
+                    else
+                    {
+                        @Model.BirthDay.Value.ToShortDateString()
+                    }
+
+
+                </td>
             </tr>
 
 
