--- a/Identity/Views/Member/MemberLayout.cshtml
+++ b/Identity/Views/Member/MemberLayout.cshtml
@@ -21,7 +21,13 @@
                     <a class="nav-link" asp-action="Index" asp-controller="Member">Üye AnaSayfa </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link btn btn-info"  asp-action="Index" asp-controller="Admin">Admin AnaSayfa </a>
+                    <a class="nav-link btn btn-info" asp-action="Editör" asp-controller="Member">Editör AnaSayfa </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link btn btn-info" asp-action="Manager" asp-controller="Member">Manager AnaSayfa </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link btn btn-info" asp-action="Index" asp-controller="Admin">Admin AnaSayfa </a>
                 </li>
 
             </ul>
