--- a/Identity/Views/Member/MemberLayout.cshtml
+++ b/Identity/Views/Member/MemberLayout.cshtml
@@ -29,6 +29,9 @@
                 <li class="nav-item active">
                     <a class="nav-link btn btn-info" asp-action="Index" asp-controller="Admin">Admin AnaSayfa </a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link btn btn-danger" asp-action="Adana" asp-controller="Member">Adana Sayfası </a>
+                </li>
 
             </ul>
         </div>
