--- a/Identity/Views/Admin/AdminLayout.cshtml
+++ b/Identity/Views/Admin/AdminLayout.cshtml
@@ -32,6 +32,8 @@
             <div class="col-md-4">
                 <h3>Menü</h3>
 
+                <a class="btn btn-danger btn-block" asp-action="Claims" asp-controller="Admin">Claimler</a>
+
                 <a class="btn btn-danger btn-block" asp-action="Users" asp-controller="Admin">Üyeler</a>
 
                 <a class="btn btn-danger btn-block" asp-action="Roles" asp-controller="Admin">Roller</a>
