--- a/Identity/Views/Admin/AdminLayout.cshtml
+++ b/Identity/Views/Admin/AdminLayout.cshtml
@@ -20,7 +20,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" asp-action="Index" asp-controller="Admin">Admin AnaSayfa </a>
                 </li>
-
+                <li class="nav-item active">
+                    <a class="nav-link" asp-action="Index" asp-controller="Member">Member AnaSayfa </a>
+                </li>
             </ul>
         </div>
     </nav>
