--- a/Identity/Views/Member/AccessDenied.cshtml
+++ b/Identity/Views/Member/AccessDenied.cshtml
@@ -4,5 +4,5 @@
     Layout = "~/Views/Member/MemberLayout.cshtml";
 }
 
-<h1>Bu sayfaya erişim izniniz yoktur. Erişim izni almak için site yöneticisiyle görüşünüz</h1>
+<h1>@ViewBag.message</h1>
 
