--- a/Identity/Views/Member/MemberLayout.cshtml
+++ b/Identity/Views/Member/MemberLayout.cshtml
@@ -29,9 +29,7 @@
                 <li class="nav-item active">
                     <a class="nav-link btn btn-info" asp-action="Index" asp-controller="Admin">Admin AnaSayfa </a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link btn btn-danger" asp-action="Adana" asp-controller="Member">Adana Sayfası </a>
-                </li>
+
 
             </ul>
         </div>
@@ -42,13 +40,16 @@
                 @RenderBody()
             </div>
             <div class="col-md-4">
+
+                <a class="btn btn-danger btn-block" asp-action="Adana" asp-controller="Member">Adana Sayfası </a>
+                <a class="btn btn-danger btn-block" asp-action="Violence" asp-controller="Member">Şiddet içeren sayfa </a>
                 <a class="btn btn-info btn-block" asp-action="PasswordChange" asp-controller="Member">Şifre Değiştirme</a>
                 <a class="btn btn-info btn-block" asp-action="UserEdit" asp-controller="Member">Bilgilerimi Güncelle</a>
                 <a class="btn btn-info btn-block" asp-action="LogOut" asp-controller="Member" asp-route-returnUrl="/Home/Index">Çıkış</a>
 
             </div>
         </div>
-       
+
     </div>
 </body>
 </html>
