--- a/Identity/Views/Member/MemberLayout.cshtml
+++ b/Identity/Views/Member/MemberLayout.cshtml
@@ -43,6 +43,7 @@
 
                 <a class="btn btn-danger btn-block" asp-action="Adana" asp-controller="Member">Adana Sayfası </a>
                 <a class="btn btn-danger btn-block" asp-action="Violence" asp-controller="Member">Şiddet içeren sayfa </a>
+                <a class="btn btn-danger btn-block" asp-action="RedirectBorsa" asp-controller="Member">Borsa Sayfası </a>
                 <a class="btn btn-info btn-block" asp-action="PasswordChange" asp-controller="Member">Şifre Değiştirme</a>
                 <a class="btn btn-info btn-block" asp-action="UserEdit" asp-controller="Member">Bilgilerimi Güncelle</a>
                 <a class="btn btn-info btn-block" asp-action="LogOut" asp-controller="Member" asp-route-returnUrl="/Home/Index">Çıkış</a>
